# Livox_merge

./: CMakeLists.txt  README.md  package.xml
config/: livox_merge_config.yaml
launch/: livox_merge.launch  livox_merge_aibot.launch  livox_merge_simple.launch
rviz/: livox_merge.rviz
scripts/: test_fusion_system.py  test_imu_time_order.py
src/: MergeLidar.cpp
